<resources>
    <string name="app_name">Recommendify</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Personal Recommendations</string>
    <string name="menu_workout">Workout Recommendations</string>
    <string name="menu_sleeping">Sleeping Recommendations</string>
    <string name="menu_navigation">Navigation Recommendations</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="imageofplaylist">imageOfPlaylist</string>
    <string name="share_current_song">Share Current Song</string>
</resources>
