<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.androidfinalproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_personal" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.androidfinalproject.ui.workout.WorkoutFragment"
        android:label="@string/menu_workout"
        tools:layout="@layout/fragment_workout" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.androidfinalproject.ui.sleeping.SleepingFragment"
        android:label="@string/menu_sleeping"
        tools:layout="@layout/fragment_sleeping" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.androidfinalproject.ui.navigation.NavigationFragment"
        android:label="@string/menu_navigation"
        tools:layout="@layout/fragment_navigation" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.androidfinalproject.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.androidfinalproject.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>