<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!-- Music icon icon by https://icons8.com Icons -->
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icons8_music_24"
            android:title="@string/menu_home" />

        <!-- Strength icon icon by https://icons8.com Icons -->
        <item
            android:id="@+id/nav_workout"
            android:icon="@drawable/icons8_strength_24"
            android:title="@string/menu_workout" />

        <!-- Sleeping icon icon by https://icons8.com Icons -->
        <item
            android:id="@+id/nav_sleeping"
            android:icon="@drawable/icons8_sleep_26"
            android:title="@string/menu_sleeping" />

        <!-- Driving icon icon by https://icons8.com Icons -->
        <item
            android:id="@+id/nav_driving"
            android:icon="@drawable/icons8_driving_24"
            android:title="@string/menu_navigation" />
    </group>

    <!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>
    -->

</menu>
